force-app/main/default/objects/Individual_Program_Application__c/Individual_Program_Application__c.object-meta.xml
<CustomObject>
    <description>The study program application for an individual.</description>
    <label>Individual Program Application</label>
    <nameField>
        <displayFormat>IPA-{00000}</displayFormat>
        <label>Individual Program Application #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Individual Program Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>