force-app/main/default/objects/Individual_Program_Application__c/fields/Application_Date__c.field-meta.xml
<CustomField>
    <fullName>Application_Date__c</fullName>
    <description>The date of when the application is submitted.</description>
    <inlineHelpText>The date of when the application is submitted.</inlineHelpText>
    <label>Application Date</label>
    <type>Date</type>
</CustomField>