force-app/main/default/objects/Individual_Program_Application__c/fields/Application_Status__c.field-meta.xml
<CustomField>
    <fullName>Application_Status__c</fullName>
    <label>Application Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Reviewing</fullName>
            </value>
            <value>
                <fullName>Reviewing - Awaiting Documentation</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Offer</fullName>
            </value>
            <value>
                <fullName>Offer Accepted</fullName>
            </value>
            <value>
                <fullName>Offer Declined</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Waitlisted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>