force-app/main/default/objects/Individual_Program_Application__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The applicant.</description>
    <inlineHelpText>The applicant.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Individual Program Applications</relationshipLabel>
    <relationshipName>Individual_Program_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>