force-app/main/default/objects/Individual_Program_Application__c/fields/Default_Campus__c.field-meta.xml
<CustomField>
    <fullName>Default_Campus__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default Campus</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Campus</value>
        </filterItems>
        <infoMessage>Please select a campus account.</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Individual Program Applications</relationshipLabel>
    <relationshipName>Individual_Program_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>