force-app/main/default/objects/Individual_Program_Application__c/fields/Secondary_Study_Plan__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Study_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The default study plan for child individual program enrollment.</description>
    <inlineHelpText>The secondary study plan.</inlineHelpText>
    <label>Secondary Study Plan</label>
    <referenceTo>Study_Plan__c</referenceTo>
    <relationshipLabel>Secondary Individual Program Applications</relationshipLabel>
    <relationshipName>Second_Individual_Program_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>