force-app/main/default/objects/Individual_Program_Application__c/fields/Skip_Duplicate_Rules__c.field-meta.xml
<CustomField>
    <fullName>Skip_Duplicate_Rules__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To bypass duplicate rules and allow intentional duplicate entries when necessary (e.g., for internal processing or migration scenarios)</description>
    <label>Skip Duplicate Rules</label>
    <type>Checkbox</type>
</CustomField>