force-app/main/default/objects/Individual_Program_Application__c/fields/Student_Group_Type__c.field-meta.xml
<CustomField>
    <fullName>Student_Group_Type__c</fullName>
    <label>Student Group Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
                <default>true</default>
                <label>Standard</label>
            </value>
            <value>
                <fullName>Disabled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>