force-app/main/default/objects/Individual_Program_Application__c/fields/Study_Intake__c.field-meta.xml
<CustomField>
    <fullName>Study_Intake__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Study Intake</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Study_Intake__c.Study_Program__c</field>
            <operation>equals</operation>
            <valueField>$Source.Study_Program__c</valueField>
        </filterItems>
        <infoMessage>Please select a study intake that belongs to the same study program.</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Study_Intake__c</referenceTo>
    <relationshipLabel>Individual Program Applications</relationshipLabel>
    <relationshipName>Individual_Program_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>