force-app/main/default/objects/Individual_Program_Application__c/fields/Study_Intake_Group_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Study_Intake_Group_Assignment__c</fullName>
    <label>Study Intake Group Assignment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Auto</fullName>
                <default>true</default>
                <label>Auto</label>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>