force-app/main/default/objects/Individual_Program_Application__c/fields/Study_Mode__c.field-meta.xml
<CustomField>
    <fullName>Study_Mode__c</fullName>
    <label>Study Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Study_Mode</valueSetName>
    </valueSet>
</CustomField>