force-app/main/default/objects/Individual_Program_Application__c/fields/Study_Pathway__c.field-meta.xml
<CustomField>
    <fullName>Study_Pathway__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Study Pathway</label>
    <referenceTo>Study_Pathway__c</referenceTo>
    <relationshipLabel>Individual Program Applications</relationshipLabel>
    <relationshipName>Individual_Program_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>