force-app/main/default/objects/Individual_Program_Application__c/fields/Study_Program_Admission_Path__c.field-meta.xml
<CustomField>
    <fullName>Study_Program_Admission_Path__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Study Program Admission Path</label>
    <referenceTo>Study_Program_Admission_Path__c</referenceTo>
    <relationshipLabel>Individual Program Applications</relationshipLabel>
    <relationshipName>Individual_Program_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>