force-app/main/default/objects/Individual_Program_Application__c/validationRules/Validate_Master_Secondary_SPL_Selection.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Master_Secondary_SPL_Selection</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  NOT(ISBLANK(Master_Study_Plan__c)),
  NOT(ISBLANK(Secondary_Study_Plan__c)),
  Master_Study_Plan__c = Secondary_Study_Plan__c
)</errorConditionFormula>
    <errorMessage>Master Study Plan and Secondary Study Plan cannot be the same.</errorMessage>
</ValidationRule>