force-app/main/default/objects/Individual_Program_Application__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Study_Program__c</columns>
    <columns>Master_Study_Plan__c</columns>
    <columns>Application_Date__c</columns>
    <columns>Application_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>