force-app/main/default/objects/Individual_Program_Application__c/listViews/All_Offer_Accepted_Applications.listView-meta.xml
<ListView>
    <fullName>All_Offer_Accepted_Applications</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Study_Program__c</columns>
    <columns>Master_Study_Plan__c</columns>
    <columns>Application_Date__c</columns>
    <columns>Application_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Application_Status__c</field>
        <operation>equals</operation>
        <value>Offer Accepted</value>
    </filters>
    <label>All Offer Accepted Applications</label>
</ListView>