force-app/main/default/objects/Individual_Program_Application__c/listViews/All_Submitted_Applications.listView-meta.xml
<ListView>
    <fullName>All_Submitted_Applications</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Study_Program__c</columns>
    <columns>Master_Study_Plan__c</columns>
    <columns>Application_Date__c</columns>
    <columns>Application_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Application_Status__c</field>
        <operation>equals</operation>
        <value>Submitted</value>
    </filters>
    <label>All Submitted Applications</label>
</ListView>