force-app/main/default/objects/Individual_Program_Application__c/listViews/Todays_New_Applications.listView-meta.xml
<ListView>
    <fullName>Todays_New_Applications</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Study_Program__c</columns>
    <columns>Master_Study_Plan__c</columns>
    <columns>Application_Date__c</columns>
    <columns>Application_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Application_Date__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Today&apos;s New Applications</label>
</ListView>